# uomi-node

./: .editorconfig  .gitignore  AUDIT_NONDETERMINISM.md  CHANGELOG.md  Cargo.toml  DIAGNOSTIC_REPORT.md  FAQ.md  LICENSE  MULTICHAIN_TSS_IMPLEMENTATION.md  Procfile.dev  README-ID.md  README.md  genesis.json  rust-toolchain.toml  test_multichain.rs
.config/: zepter.yaml
.githooks/: commit-msg
.github/workflows/: ci.yml  update-versions.yml
chain-extensions/pallet-assets/: Cargo.toml
chain-extensions/pallet-assets/src/: lib.rs  mock.rs  tests.rs
chain-extensions/types/assets/: Cargo.toml
chain-extensions/types/assets/src/: lib.rs
chain-extensions/types/unified-accounts/: Cargo.toml
chain-extensions/types/unified-accounts/src/: lib.rs
chain-extensions/unified-accounts/: Cargo.toml
chain-extensions/unified-accounts/src/: lib.rs
client/ipfs-manager/: Cargo.toml  build.rs
client/ipfs-manager/src/: lib.rs  manager.rs
client/offchain/: Cargo.toml
client/offchain/src/: api.rs
client/tss/: Cargo.toml  README.md
client/tss/src/: dkg_handler.rs  dkghelpers.rs  dkground1.rs  dkground2.rs  ecdsa.rs  ecdsa_handler.rs  lib.rs  peer_manager.rs  peer_mapper.rs  session_components.rs  session_state.rs  session_validator.rs  setup.rs  signing_handler.rs  test_framework.rs  test_framework_multi_node.rs  types.rs  utils.rs
client/tss/src/client/: manager.rs  mod.rs  wrapper.rs
client/tss/src/dkg_session/: mod.rs  round1.rs  round2.rs  session.rs
client/tss/src/ecdsa/: handler.rs  message_processor.rs  mod.rs  operations.rs  phases.rs  session_creator.rs  tests.rs
client/tss/src/gossip/: message_processor.rs  mod.rs  router.rs  signing.rs
client/tss/src/network/: mod.rs  peer_mapper.rs  setup.rs
client/tss/src/retry/: mechanism.rs  mod.rs
client/tss/src/runtime/: event_handler.rs  mod.rs
client/tss/src/security/: verification.rs
client/tss/src/session/: cleanup.rs  core.rs  dkg_message_processor.rs  dkg_state_manager.rs  errors.rs  manager.rs  managers.rs  message_processor.rs  mod.rs  participant_manager.rs  retry_manager.rs  signing_message_processor.rs  signing_state_manager.rs  types.rs
client/tss/src/signing/: frost.rs
client/tss/src/types/: messages.rs  mod.rs  states.rs
client/tss/src/validation/: mod.rs  validator.rs
docs/: 001-IMPROVEMENT_PROPOSAL_Action_Elaboration_System.md  FEATURE_PROPOSAL_Action_Elaboration_System.md  UIP-001_Action_Elaboration_System.md  architecture.md
examples/: deploy_counter.rs  eip7702_send.rs  multichain_usage.rs
node/: Cargo.toml  build.rs
node/examples/: EIP7702_README.md  check_tx_receipt.rs  compute_ss58.rs  decode_7702.rs  deploy_counter.rs  derive_pubkey.rs  eip1559_send.rs  eip7702_demo.rs  eip7702_send.rs  list_contracts.rs  test_eip7702.rs  verify_delegation.rs
node/src/: benchmarking.rs  cli.rs  command.rs  evm_tracing_types.rs  ipfs_inherent.rs  lib.rs  rpc.rs
node/src/finney/: chain_spec.rs  mod.rs  service.rs
node/src/local/: chain_spec.rs  mod.rs  service.rs
node/src/rpc/: tracing.rs
node/src/uomi/: chain_spec.rs  mod.rs  service.rs
pallets/RelayerOrchestration/: cargo.toml
pallets/RelayerOrchestration/src/: lib.rs  rpc.rs  runtime_api.rs
pallets/base-fee/: Cargo.toml
pallets/base-fee/src/: lib.rs
pallets/bridge/src/: lib.rs
pallets/collective-proxy/: Cargo.toml
pallets/collective-proxy/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/era-payout/: Cargo.toml
pallets/era-payout/src/: lib.rs
pallets/ipfs/: Cargo.toml
pallets/ipfs/src/: ipfs.rs  lib.rs  migrations.rs  mock.rs  storages.rs  tests.rs  types.rs
pallets/tss/: Cargo.toml
pallets/tss/src/: crypto.rs  dkghelpers.rs  dkground1.rs  dkground2.rs  dkground3.rs  errors.rs  fsa.rs  lib.rs  mock.rs  multichain.rs  payloads.rs  prop_tests.rs  sessions.rs  signlib.rs  tests.rs  types.rs  utils.rs  validators.rs
pallets/tss/src/migrations/: mod.rs  v1.rs
pallets/unified-accounts/: Cargo.toml
pallets/unified-accounts/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/uomi-engine/: BK_tests.rs  Cargo.toml  README.md  build.rs  temp.rs
pallets/uomi-engine/src/: aimodelscalc.rs  benchmarking.rs  consts.rs  crypto.rs  ipfs.rs  lib.rs  migrations.rs  mock.rs  offchain.rs  opoc.rs  payloads.rs  tests.rs  types.rs  weights.rs
pallets/uomi-engine/src/test_agents/: agent0.wasm  agent1.wasm  agent2.wasm  agent3.wasm  agent4.wasm  agent_http.wasm  agent_http.wat  uomi_whitepaper_chat_agent.wasm
precompiles/assets-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/bridge/: Cargo.toml
precompiles/bridge/src/: lib.rs
precompiles/dispatch-lockdrop/: Cargo.toml
precompiles/dispatch-lockdrop/src/: lib.rs  mock.rs  tests.rs
precompiles/ipfs/: Cargo.toml
precompiles/ipfs/src/: lib.rs
precompiles/sr25519/src/: lib.rs  mock.rs  tests.rs
precompiles/substrate-ecdsa/src/: lib.rs  mock.rs  tests.rs
precompiles/unified-accounts/: Cargo.toml  UnifiedAccounts.sol
precompiles/unified-accounts/src/: lib.rs  mock.rs  tests.rs
precompiles/uomi-engine/: Cargo.toml  IEngine.sol
precompiles/uomi-engine/src/: lib.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/src/: precompile_set.rs
precompiles/utils/src/evm/: handle.rs
precompiles/utils/src/testing/: account.rs
precompiles/utils/tests-external/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: benchmarks.rs  evm.rs  governance.rs  lib.rs  precompiles.rs
runtime/finney/: Cargo.toml
runtime/finney/src/: chain_extensions.rs  lib.rs
runtime/finney/src/weights/: mod.rs  pallet_assets.rs  pallet_balances.rs
runtime/local/: Cargo.toml  build.rs
runtime/local/src/: lib.rs
runtime/local/src/weights/: pallet_assets.rs  pallet_balances.rs
runtime/uomi/: Cargo.toml
runtime/uomi/src/: lib.rs  precompiles.rs
runtime/uomi/src/weights/: pallet_assets.rs  pallet_balances.rs
scripts/: dev-genesis-admin.sh  fetch-ipfs-binaries.sh  install-node.sh  install-simple.sh
