[workspace]
members = [
	"node",
	"runtime/local",
	"runtime/finney",
	"runtime/uomi",
	"pallets/*",
	"precompiles/*",
	"primitives",
	"chain-extensions/pallet-assets",
	"chain-extensions/unified-accounts",
	"chain-extensions/types/*",
	"vendor/evm-tracing",
	"vendor/primitives/debug",
	"vendor/primitives/evm-tracing-events",
	"vendor/primitives/txpool",
	"vendor/rpc/debug",
	"vendor/rpc/trace",
	"vendor/rpc/txpool",
	"vendor/rpc-core/debug",
	"vendor/rpc-core/trace",
	"vendor/rpc-core/txpool",
	"vendor/rpc-core/types",
	"vendor/runtime/evm-tracer",
	"vendor/runtime/ext", "client/ipfs-manager",
]

resolver = "2"

exclude = ["vendor"]

[profile.release]
# Uomi runtime requires unwinding.
panic = "unwind"

[workspace.package]
authors = ["Uomi team"]
edition = "2021"
homepage = "https://uomi.ai"
repository = "https://github.com/Uomi-network/uomi-node"

[patch."https://github.com/paritytech/polkadot-sdk"]
# Remove this after uplifting to polkadot-sdk version `v1.12.0` or higher.
pallet-balances = { git = "https://github.com/AstarNetwork/polkadot-sdk", branch = "astar-release-polkadot-v1.9.0" }

[workspace.dependencies]
# General deps
# (wasm)
thiserror = "1.0"
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.20", default-features = false }
environmental = { version = "1.1.2", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8.5", default-features = false }
bounded-collections = { version = "0.1.5", default-features = false }
hex = { version = "0.4.3", default-features = false }
paste = "1.0.6"
once_cell = { version = "1.19.0", default-features = false }


# (native)
array-bytes = "6.0.0"
smallvec = "1.9.0"
async-trait = "0.1.59"
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
futures = { version = "0.3.30" }
serde = { version = "1.0.151", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.92"
tokio = { version = "1.24.2", features = ["macros", "sync"] }
url = "2.2.2"
jsonrpsee = { version = "0.22.5", features = ["server"] }
hex-literal = "0.4.1"
rlp = "0.5"
tracing = "0.1.34"
similar-asserts = { version = "1.1.0" }
assert_matches = "1.3.0"
libsecp256k1 = { version = "0.7.0", default-features = false }
impl-trait-for-tuples = "0.2.2"
slices = "0.2.0"
derive_more = { version = "0.99" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }
ethers = { version = "2.0.9", default-features = false }

# Substrate
# (wasm)
pallet-staking-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.9.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-core-hashing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }

# (native)
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-offchain = { path = "./client/offchain" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
try-runtime-cli = { git = "https://github.com/paritytech/try-runtime-cli", tag = "v0.6.2" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
ipfs-manager = { path = "./client/ipfs-manager" }
tss = { path = "./client/tss" }
# Substrate pallets
# (wasm)
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-contracts-uapi = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false, features = ["historical"] }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }

# EVM & Ethereum
# (wasm)
# To make it compatible with frontier
evm = { version = "0.41.1", default-features = false }
evm-gasometer = { version = "0.41.0", default-features = false }
evm-runtime = { version = "0.41.0", default-features = false }
ethereum-types = { version = "0.14", default-features = false }
ethereum = { version = "0.15.0", default-features = false }

# Frontier
# (wasm)
fp-rpc = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
fp-self-contained = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false, features = ["serde"] }
pallet-ethereum = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm-precompile-blake2 = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }

pallet-evm-chain-id = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
fp-evm = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
fp-ethereum = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", default-features = false }
parking_lot = "0.12.1"

# (native)
fc-consensus = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fc-db = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fc-api = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fc-mapping-sync = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fc-rpc = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0", features = ["rpc-binary-search-estimate", "txpool"] }
fc-rpc-core = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fp-consensus = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fp-storage = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }
fc-storage = { git = "https://github.com/Uomi-network/frontier", branch = "polkadot-v1.9.0" }

node-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false  }

# Polkadot
# (wasm)
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }


# (native)
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }

# ORML
# (wasm)


# Uomi pallets & modules
# (wasm)
pallet-base-fee = { path = "./pallets/base-fee", default-features = false }
pallet-unified-accounts = { path = "./pallets/unified-accounts", default-features = false }
pallet-collective-proxy = { path = "./pallets/collective-proxy", default-features = false }
pallet-uomi-engine = { path = "./pallets/uomi-engine", default-features = false }
pallet-ipfs = { path = "./pallets/ipfs", default-features = false }
pallet-tss = { path = "./pallets/tss", default-features = false }

uomi-primitives = { path = "./primitives", default-features = false }

pallet-evm-precompile-uomi-engine = { path = "./precompiles/uomi-engine", default-features = false }
pallet-evm-precompile-ipfs = { path = "./precompiles/ipfs", default-features = false }
pallet-evm-precompile-assets-erc20 = { path = "./precompiles/assets-erc20", default-features = false }
pallet-evm-precompile-sr25519 = { path = "./precompiles/sr25519", default-features = false }
pallet-evm-precompile-substrate-ecdsa = { path = "./precompiles/substrate-ecdsa", default-features = false }
pallet-evm-precompile-unified-accounts = { path = "./precompiles/unified-accounts", default-features = false }
pallet-evm-precompile-dispatch-lockdrop = { path = "./precompiles/dispatch-lockdrop", default-features = false }

pallet-chain-extension-assets = { path = "./chain-extensions/pallet-assets", default-features = false }
pallet-chain-extension-unified-accounts = { path = "./chain-extensions/unified-accounts", default-features = false }

assets-chain-extension-types = { path = "./chain-extensions/types/assets", default-features = false }
unified-accounts-chain-extension-types = { path = "./chain-extensions/types/unified-accounts", default-features = false }

precompile-utils = { path = "./precompiles/utils", default-features = false }

local-runtime = { path = "./runtime/local", default-features = false }
finney-runtime = { path = "./runtime/finney", default-features = false }
uomi-runtime = { path = "./runtime/uomi", default-features = false }

## Moonbeam tracing
## (wasm)
moonbeam-evm-tracer = { path = "./vendor/runtime/evm-tracer", default-features = false }
moonbeam-rpc-primitives-debug = { path = "./vendor/primitives/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "./vendor/primitives/txpool", default-features = false }
evm-tracing-events = { path = "./vendor/primitives/evm-tracing-events", default-features = false }
moonbeam-primitives-ext = { path = "./vendor/runtime/ext", default-features = false }

## (native)
moonbeam-rpc-debug = { path = "./vendor/rpc/debug" }
moonbeam-rpc-trace = { path = "./vendor/rpc/trace" }
moonbeam-rpc-txpool = { path = "./vendor/rpc/txpool" }
moonbeam-client-evm-tracing = { path = "./vendor/evm-tracing" }
moonbeam-rpc-core-types = { path = "./vendor/rpc-core/types" }
moonbeam-rpc-core-txpool = { path = "./vendor/rpc-core/txpool" }
moonbeam-rpc-core-trace = { path = "./vendor/rpc-core/trace" }
moonbeam-rpc-core-debug = { path = "./vendor/rpc-core/debug" }

# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0" }

